example/lib/src/generated/errors/errors_localization_te.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Telugu (`te`).
class ErrorsLocalizationTe extends ErrorsLocalization {
  ErrorsLocalizationTe([String locale = 'te']) : super(locale);

  @override
  String get error => 'లోపం సంభవించింది';

  @override
  String get unexpectedError => 'అనుకోని లోపం సంభవించింది';

  @override
  String get bugReportSentText => 'బగ్ నివేదిక విజయవంతంగా పంపబడింది.';
}
